# file_retrieval_gui

./: .gitignore  INDEX.md  README.md  __init__.py  ai_path_finder.py  exclusion_patterns.py  gui.py  main.py  ollama_client.py  requirements.txt  smart_paster.py
.claude/: settings.local.json
agent/: main.py
assets/: generate_icon.sh
core/: __init__.py  ai_strengths.py  chat.py  globals.py  llm.py  llm_router.py  pyproject.toml
core/providers/: cls_anthropic_interface.py  cls_google_interface.py  cls_groq_interface.py  cls_human_as_interface.py  cls_nvidia_interface.py  cls_ollama_interface.py  cls_openai_interface.py  cls_whisper_interface.py
infrastructure/rate_limiting/: cls_enhanced_rate_limit_tracker.py  cls_rate_limit_config.py  cls_rate_limit_parsers.py  cls_rate_limit_tracker.py
py_classes/: unified_interfaces.py
shared/: __init__.py  cmd_execution.py  common_utils.py  dia_helper.py  path_resolver.py  pyproject.toml  utils_audio.py
shared/audio/: __init__.py  audio_utils.py
shared/utils/: __init__.py
shared/utils/python/: __init__.py  python_utils.py
shared/utils/rag/: __init__.py  rag_utils.py
shared/utils/search/: __init__.py  brave_search.py
shared/utils/web/: web_server.py
shared/utils/youtube/: __init__.py  youtube_utils.py
tools/: getuserfiles.py
