[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-agent-core"
version = "1.0.0"
description = "Core AI infrastructure for CLI-Agent"
authors = [
    {name = "Probst1nator", email = "your-email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cli-agent-shared",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "termcolor>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
providers = ["groq", "google-generativeai", "ollama"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]